--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,11 +13,11 @@
     "paths": {
       "*": [
         "node_modules/*",
-        "src/types/*"
+        "lib/types/*"
       ]
     }
   },
   "include": [
-    "src/**/*"
+    "lib/**/*"
   ]
 }
