--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@types/punycode": "^2.1.0",
     "@types/underscore": "^1.9.2",
     "tslint": "^5.18.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.5.3",
+    "mocha": "^6.2.0"
   },
   "dependencies": {
     "net": "^1.0.2",
